fixed heart svg size on mobile

--- a/src/OnboardingSPA/steps/SiteGen/Preview/stylesheet.scss
+++ b/src/OnboardingSPA/steps/SiteGen/Preview/stylesheet.scss
@@ -74,13 +74,17 @@
 		align-items: center;
 		background: var(--nfd-onboarding-card-background);
 		color: var(--nfd-onboarding-primary);
-		gap: 18px;
+		gap: 14px;
 		padding: 16px;
 		font-size: 16px;
 		line-height: 22px;
 		text-align: center;
 		border-radius: 12px;
 		margin-bottom: 70px;
+
+		@media (max-width: #{ ($break-mobile) }) {
+			gap: 8px;
+		}
 	}
 
 	@keyframes heartBeat {
@@ -101,6 +105,11 @@
 	.heart {
 		stroke-width: 2px;
 		stroke: var(--nfd-onboarding-heart-icon-stroke);
+
+		@media (max-width: #{ ($break-mobile) }) {
+			width: 50px;
+			height: auto;
+		}
 	}
 
 	.heart path {
